--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
     <div class="canvas">
     </div>
+    <div class="slidecontainer">
+        <input type="range" min="10" max="30" value="20" class="slider">
+    </div>
     <div class="controlPanel">
-        <button type="button" class="resetCanvasBtn">Reset</button>    
+        <div class="colorPanel">
+            <input type="color" name="colorSelect" value="#000000">
+        </div>
+        <button type="button" class="resetCanvasBtn">Reset</button>
     </div>
 </body>
 </html>
