Add rainbow mode

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div class="canvas">
+    <div class="canvas" data-color="black">
     </div>
     <div class="slidecontainer">
         <input type="range" min="10" max="30" value="20" class="slider">
     </div>
     <div class="controlPanel">
+        <button type="button" class="rainbowBtn">Color Mode</button>
         <div class="colorPanel">
             <input type="color" name="colorSelect" value="#000000">
         </div>
