--- a/index.html
+++ b/index.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
-    <script src="./sketch.js" defer></script>
+    <script src="./script.js" defer></script>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div class="canvas" data-color="black">
-    </div>
-    <div class="slidecontainer">
-        <input type="range" min="10" max="30" value="20" class="slider">
-    </div>
-    <div class="controlPanel">
-        <button type="button" class="rainbowBtn">Color Mode</button>
-        <div class="colorPanel">
-            <input type="color" name="colorSelect" value="#000000">
+    <header>
+        <div class="logoContainer">
+            <img src="./icon.svg" alt="Pixelated Grid Logo">
         </div>
-        <button type="button" class="resetCanvasBtn">Reset</button>
+        <h1>Etch-A-Sketch</h1>
+    </header>
+    <div class="canvas" data-color="black"></div>
+    <div class="controlPanel">
+        <div class="sliderContainer">
+            <input type="range" min="10" max="30" value="20" class="slider">
+        </div>
+        <div class="btnContainer">
+            <button type="button" class="rainbowBtn btn smallBtn"></button>
+            <div class="colorPanel btn">
+                <input type="color" name="colorSelect" value="#000000">
+            </div>
+            <button type="button" class="resetCanvasBtn btn smallBtn">!</button>
+        </div>
     </div>
 </body>
 </html>
